--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,86 @@
+#name: "Ace Designs Website Built with Gitjub.io"
+#description: "Just another Website built by Ace"
+#url: "http://localhost:4000"
+#paginate: 10
+#markdown: rdiscount
+#permalink: pretty
+#pygments: true
+#highlighter: pygments
+#github: [Repository metadata]
+#
+# This file contains configuration flags to customize your site
+#
+
+# Name of your site (displayed in the header)
 name: "Ace Designs Website Built with Gitjub.io"
+
+# Short bio or description (displayed in the header)
 description: "Just another Website built by Ace"
 
-url: "http://acedesigns.github.io"
+# URL of your avatar or profile pic (you could use your GitHub profile pic)
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
-paginate: 10
+#
+# Flags below are optional
+#
 
-markdown: rdiscount
-permalink: pretty
-pygments: true
+# Includes an icon in the footer for each username you enter
+footer-links:
+  dribbble:
+  email: anele@acedesigns.co.za
+  facebook: 
+  flickr:
+  github: barryclark/jekyll-now
+  instagram:
+  linkedin: za.linkedin.com/in/anele
+  pinterest:
+  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  twitter: anele_ace
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  youtube: # channel/<your_long_string> or user/<user-name>
+  googleplus: # anything in your profile username that comes after plus.google.com/
+
+
+# Enter your Disqus shortname (not your username) to enable commenting on posts
+# You can find your shortname on the Settings page of your Disqus account
+disqus:
+
+# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
+google_analytics:
+
+# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Used for Sitemap.xml and your RSS feed
+url: "http://localhost:4000"
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+baseurl: ""
+
+#
+# !! You don't need to change any of the configuration flags below !!
+#
+
+markdown: redcarpet
 highlighter: pygments
-github: [Repository metadata]
+permalink: /:title/
 
+# The release of Jekyll Now that you're using
+version: v1.1.0
+
+# Set the Sass partials directory, as we're using @imports
+sass:
+  style: :expanded # You might prefer to minify using :compressed
+
+# Use the following plug-ins
+gems:
+  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+
+# Exclude these files from your production _site
+exclude:
+    - Gemfile
+    - Gemfile.lock
+    - LICENSE
+    - README.md
+    - CNAME
