--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "Ace Designs Website Built with Gitjub.io"
+name: "Ace Designs Website Built with Github.io"
 
 # Short bio or description (displayed in the header)
 description: "Just another Website built by Ace"
