--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,15 @@
-#name: "Ace Designs Website Built with Gitjub.io"
-#description: "Just another Website built by Ace"
-#url: "http://localhost:4000"
-#paginate: 10
-#markdown: rdiscount
-#permalink: pretty
-#pygments: true
-#highlighter: pygments
-#github: [Repository metadata]
 #
 # This file contains configuration flags to customize your site
 #
 
 # Name of your site (displayed in the header)
-name: "Ace Designs Website Built with Gitjub.io"
+name: "Ace Designs "
 
 # Short bio or description (displayed in the header)
 description: "Just another Website built by Ace"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: 
 
 #
 # Flags below are optional
@@ -30,13 +21,13 @@ footer-links:
   email: anele@acedesigns.co.za
   facebook: 
   flickr:
-  github: barryclark/jekyll-now
+  github: acedesigns/
   instagram:
-  linkedin: za.linkedin.com/in/anele
+  linkedin: anele
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: anele_ace
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  stackoverflow: "users/921143/anele" # your stackoverflow profile, e.g. "users/921143/anele"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
